--- a/package.json
+++ b/package.json
@@ -14,10 +14,8 @@
     "normalize-scss": "^7.0.1",
     "patternlab-node": "^2.0.0",
     "starterkit-mustache-base": "^3.0.1",
-    "styleguidekit-assets-acca": "file:../styleguidekit-assets-acca-1.0.0.tgz",
     "styleguidekit-assets-default": "^3.5.2",
-    "styleguidekit-mustache-default": "^3.0.0",
-    "surge-ignore": "^0.3.0"
+    "styleguidekit-mustache-default": "^3.0.0"
   },
   "keywords": [
     "Pattern Lab",
