--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "eslint-plugin-chai-expect": "^1.1.1",
     "eslint-plugin-import": "^2.11.0",
     "eslint-plugin-mocha": "^5.0.0",
+    "firebase-tools": "^3.18.4",
     "glob": "^7.1.2",
     "gulp-notify": "^3.2.0",
     "gulp-postcss": "^7.0.1",
