--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,43 +1,19 @@
-# Javascript Node CircleCI 2.0 configuration file
-#
-# Check https://circleci.com/docs/2.0/language-javascript/ for more details
-#
 version: 2
 jobs:
-  build:
-    docker:
-      - image: circleci/node:latest-browsers
-      
-      # Specify service dependencies here if necessary
-      # CircleCI maintains a library of pre-built images
-      # documented at https://circleci.com/docs/2.0/circleci-images/
-      # - image: circleci/mongo:3.4.4
-
-    working_directory: ~/repo
-
-    steps:
-      - checkout
-
-      # Download and cache dependencies
-      - restore_cache:
-          keys:
-          - v1-dependencies-{{ checksum "package.json" }}
-          # fallback to using the latest cache if no exact match is found
-          - v1-dependencies-
-
-      - run: npm install
-
-      - save_cache:
-          paths:
-            - node_modules
-          key: v1-dependencies-{{ checksum "package.json" }}
-        
-      # run tests!
-      - run: npm run test:single-run
-  deployment:
-    production:
-      branch: master
-      commands:
-        - firebase deploy --token "1/PytYAK-rkWmVjR2FNEMggIIzwI78Q6WH_QTZahC3ez9UCYP1cWXjvjLzCaGc3F9N"
-
-
+    build:
+        docker:
+            - image: circleci/node:latest-browsers
+        steps:
+            - checkout
+            - run:
+                name: install-dependencies
+                command: npm install
+            - run:
+                name: tests
+                command: npm run test:single-run
+            - run:
+                name: build
+                command: npm run build
+            - deploy:
+                name: firebase
+                command: firebase deploy --token=$FIREBASE_TOKEN
