--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,4 +16,4 @@ jobs:
                 command: npm run build
             - deploy:
                 name: firebase
-                command: firebase deploy --token=$FIREBASE_TOKEN
+                command: ./node_modules/.bin/firebase deploy --token=$FIREBASE_TOKEN
